<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework2</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="other"></string>
    <string name="color"></string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="Green"></string>
    <string name="Other">Other</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="ocean">Ocean</string>
    <string name="forest">Forest</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>
    <string name="enter">Enter</string>
    <string name="editText"></string>

</resources>